Fix bug with invisible header and footer

--- a/src/main/webapp/css/dopstyle.css
+++ b/src/main/webapp/css/dopstyle.css
@@ -1,8 +1,12 @@
 .header {
     background-size:  cover;
+    background: #FFB500 repeat-x;
     color: #ffffff;
     text-shadow: 2px 2px 4px #000000;
     padding: 25px;
+}
+.navbar-color{
+    text-shadow: 0px 0px 0px #000000;
 }
 .main{
     background-color: #FFB500;
@@ -14,11 +18,11 @@
 }
 .footer {
     background-size:  cover;
+    background: #FFB500  repeat-x;
     color: #ffffff;
     padding: 15px;
     min-height: 20px;
 }
-
 .table-style{
     background-color: #fff;
     color: #000;
